# whats-new

./: .gitignore  LICENSE  README.md  calendar.html  index.html  main.py  old.py  prompts.py  pyproject.toml  sand.ipynb
data/: urls_raw.csv  urls_with_content.csv  urls_with_content.jsonl
src/: main.py  models.py  pyproject.toml
