[tool.poetry]
name = "whats-new"
version = "0.1.0"
description = "See what's new in local music venues"
authors = ["alexdzm"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
