[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Alex M <alex.martin@cabinetoffice.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
pydantic = "2.7.4"
python-dotenv = "1.0.1"
crawl4ai = {git = "https://github.com/unclecode/crawl4ai.git"}
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
